# pg-stream-copy

./: .gitignore  .travis.yml  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENCE.md  README.md  dev.Dockerfile  dev.docker-compose.yaml  docker-compose.yaml  e2e.Dockerfile  e2e.docker-compose.yaml  e2e_run.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
pg_batch_inserter/: schema.py  writer.py  writer_encoder.py
pg_stream_copy/: __init__.py  encoder.py  protocol.py  schema.py  writer.py  writer_encoder.py
tests/e2e/: conftest.py  test_e2e.py  test_exceptions.py  test_schema.py  test_writer_encoder.py
tests/unit/: data.py  mocks.py  test_encoder.py  test_protocol.py  test_writer.py  test_writer_encoder.py
