[tool.poetry]
name = "pg-stream-copy"
version = "2.0.2"
description = "RTB House apps pg_stream_copy"
authors = ["RTB House Apps Team <apps@rtbhouse.com>"]
license = "MIT License"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.3"
types-psycopg2 = "^2.9.19"

black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^0.991"
pylint = "^2.15.10"

pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
strict = true

[tool.pylint.main]
py-version = "3.8"
load-plugins = """
    pylint.extensions.check_elif,
    pylint.extensions.confusing_elif,
    pylint.extensions.consider_ternary_expression,
    pylint.extensions.empty_comment,
    pylint.extensions.eq_without_hash,
    pylint.extensions.for_any_all,
    pylint.extensions.redefined_loop_name,
    pylint.extensions.redefined_variable_type,
    pylint.extensions.set_membership,
    pylint.extensions.typing,
"""
extension-pkg-whitelist = "psycopg2"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.message_control]
enable = "all"
disable = """
    broad-except,
    broad-exception-raised,
    duplicate-code,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    no-else-return,
"""

[tool.pytest.ini_options]
addopts = "--cov=pg_stream_copy/ --cov-report=term"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
