[metadata]
name = pg_batch_inserter
version = attr: pg_batch_inserter.__version__
description = RTB House apps pg_batch_inserter
author = RTB House Apps team
author_email = apps@rtbhouse.com
url = https://github.com/rtbhouse-apps/rtbhouse-pg-bulk-inserter

[options]
zip_safe = False
include_package_data = False
packages = find:

[options.extras_require]
dev =
  pytest==5.2.0
  pytest-cov==2.8.1
  mypy==0.730
  pyflakes==2.1.1
e2e =
  psycopg2-binary==2.8.4
ci =
  codecov==2.0.15

[options.packages.find]
exclude = tests

[mypy]
ignore_missing_imports = True
check_untyped_defs = True
junit_xml = .mypy.xml

[tool:pytest]
addopts = --cov-report=html --cov-report=term --cov-report=xml

[coverage:run]
branch = True
omit = */tests/*
include = *.py

[coverage:report]
show_missing = True

[coverage:html]
directory = .coverage.report

[coverage:xml]
output = .coverage.xml

[flake8]
max_line_length = 120
