[metadata]
name = pg_stream_copy
version = attr: pg_stream_copy.__version__
description = RTB House apps pg_stream_copy
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
author = RTB House Apps team
author_email = apps@rtbhouse.com
url = https://github.com/rtbhouse-apps/pg-stream-copy
classifiers =
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.7
packages = find:

[options.extras_require]
dev =
  pytest==5.4.3
  pytest-cov==2.8.1
  mypy==0.730
  pycodestyle==2.5.0
e2e =
  psycopg2-binary==2.8.4

[options.packages.find]
exclude = tests

[options.package_data]
* = py.typed

[mypy]
ignore_missing_imports = True
check_untyped_defs = True

[tool:pytest]
addopts = --cov-report=term --cov-report=xml

[coverage:run]
branch = True
omit = */tests/*
include = *.py

[coverage:report]
show_missing = True

[coverage:xml]
output = coverage.xml

[pycodestyle]
max-line-length = 120
